--- a/src/MainClasses/MainWindowUI.fxml
+++ b/src/MainClasses/MainWindowUI.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="543.0" prefWidth="485.0" style="-fx-background-color: Grey;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainClasses.MainWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="543.0" prefWidth="485.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainClasses.MainWindowController">
    <children>
-      <Button fx:id="selectFileButton" layoutX="25.0" layoutY="27.0" mnemonicParsing="false" onAction="#selectFile" prefHeight="25.0" prefWidth="78.0" text="Select File" />
+      <TextField fx:id="absolutePathLabel" layoutX="92.0" layoutY="47.0" prefHeight="25.0" prefWidth="359.0" />
+      <Button fx:id="selectFileButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#selectFile" prefHeight="25.0" prefWidth="78.0" text="Select File" />
+      <Label layoutX="14.0" layoutY="51.0" prefHeight="17.0" prefWidth="78.0" text="Selected File:" />
    </children>
 </AnchorPane>
