--- a/src/MainClasses/MainWindowUI.fxml
+++ b/src/MainClasses/MainWindowUI.fxml
@@ -4,11 +4,68 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="543.0" prefWidth="485.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainClasses.MainWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="214.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainClasses.MainWindowController">
    <children>
-      <TextField fx:id="absolutePathLabel" layoutX="92.0" layoutY="47.0" prefHeight="25.0" prefWidth="359.0" />
-      <Button fx:id="selectFileButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#selectFile" prefHeight="25.0" prefWidth="78.0" text="Select File" />
-      <Label layoutX="14.0" layoutY="51.0" prefHeight="17.0" prefWidth="78.0" text="Selected File:" />
+      <Label layoutX="110.0" layoutY="53.0" prefHeight="20.0" prefWidth="51.0" text="Status:">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="absolutePathLabel" layoutX="110.0" layoutY="14.0" prefHeight="25.0" prefWidth="432.0" />
+      <Button fx:id="selectFileButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#selectFile" prefHeight="25.0" prefWidth="78.0" text="Browse" />
+      <Button fx:id="parseItButton" layoutX="14.0" layoutY="49.0" mnemonicParsing="false" onAction="#loadFile" prefHeight="25.0" prefWidth="78.0" text="Parse It" />
+      <Pane layoutX="14.0" layoutY="79.0" prefHeight="121.0" prefWidth="528.0" style="-fx-border-color: black; -fx-background-color: rgb(220,220,220);">
+         <children>
+            <Label fx:id="code1" layoutX="27.0" layoutY="10.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count1" layoutX="85.0" layoutY="10.0" />
+            <Label fx:id="code2" layoutX="155.0" layoutY="10.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count2" layoutX="213.0" layoutY="10.0" />
+            <Label fx:id="code3" layoutX="277.0" layoutY="10.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count3" layoutX="335.0" layoutY="10.0" />
+            <Label fx:id="code4" layoutX="414.0" layoutY="10.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count4" layoutX="472.0" layoutY="10.0" />
+            <Label fx:id="code5" layoutX="27.0" layoutY="38.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count5" layoutX="85.0" layoutY="38.0" />
+            <Label fx:id="code6" layoutX="155.0" layoutY="38.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count6" layoutX="213.0" layoutY="38.0" />
+            <Label fx:id="code7" layoutX="277.0" layoutY="38.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count7" layoutX="335.0" layoutY="38.0" />
+            <Label fx:id="code8" layoutX="414.0" layoutY="38.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count8" layoutX="472.0" layoutY="38.0" />
+            <Label fx:id="code9" layoutX="27.0" layoutY="66.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count9" layoutX="85.0" layoutY="66.0" />
+            <Label fx:id="code10" layoutX="155.0" layoutY="66.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count10" layoutX="213.0" layoutY="66.0" />
+            <Label fx:id="code11" layoutX="277.0" layoutY="66.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count11" layoutX="335.0" layoutY="66.0" />
+            <Label fx:id="code12" layoutX="414.0" layoutY="66.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count12" layoutX="472.0" layoutY="66.0" />
+            <Label fx:id="code13" layoutX="27.0" layoutY="93.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count13" layoutX="85.0" layoutY="93.0" />
+            <Label fx:id="code14" layoutX="155.0" layoutY="93.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count14" layoutX="213.0" layoutY="93.0" />
+            <Label fx:id="code15" layoutX="277.0" layoutY="93.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count15" layoutX="335.0" layoutY="93.0" />
+            <Label fx:id="code16" layoutX="414.0" layoutY="93.0" prefHeight="17.0" prefWidth="51.0" />
+            <Label fx:id="count16" layoutX="472.0" layoutY="93.0" />
+         </children></Pane>
+      <Label fx:id="statusLabel" layoutX="159.0" layoutY="54.0" prefHeight="17.0" prefWidth="103.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="313.0" layoutY="54.0" prefHeight="20.0" prefWidth="116.0" text="Records Parsed:">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="recordsLabel" layoutX="421.0" layoutY="54.0" prefHeight="17.0" prefWidth="103.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
