--- a/src/MainClasses/MainWindowUI.fxml
+++ b/src/MainClasses/MainWindowUI.fxml
@@ -19,22 +19,38 @@
       <Button fx:id="parseItButton" layoutX="14.0" layoutY="49.0" mnemonicParsing="false" onAction="#loadFile" prefHeight="25.0" prefWidth="78.0" text="Parse It" />
       <Pane layoutX="14.0" layoutY="79.0" prefHeight="121.0" prefWidth="528.0" style="-fx-border-color: black; -fx-background-color: rgb(220,220,220);">
          <children>
-            <Label fx:id="code0" layoutX="27.0" layoutY="10.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code4" layoutX="155.0" layoutY="10.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code8" layoutX="285.0" layoutY="10.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code12" layoutX="414.0" layoutY="10.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code1" layoutX="27.0" layoutY="38.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code5" layoutX="155.0" layoutY="38.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code9" layoutX="285.0" layoutY="38.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code13" layoutX="414.0" layoutY="38.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code2" layoutX="27.0" layoutY="66.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code6" layoutX="155.0" layoutY="66.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code10" layoutX="285.0" layoutY="66.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code14" layoutX="414.0" layoutY="66.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code3" layoutX="27.0" layoutY="93.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code7" layoutX="155.0" layoutY="93.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code11" layoutX="285.0" layoutY="93.0" prefHeight="17.0" prefWidth="90.0" />
-            <Label fx:id="code15" layoutX="414.0" layoutY="93.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code0" layoutX="30.0" layoutY="10.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code4" layoutX="163.0" layoutY="10.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code8" layoutX="296.0" layoutY="10.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code12" layoutX="428.0" layoutY="10.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code1" layoutX="30.0" layoutY="38.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code5" layoutX="163.0" layoutY="38.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code9" layoutX="296.0" layoutY="38.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code13" layoutX="428.0" layoutY="38.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code2" layoutX="30.0" layoutY="66.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code6" layoutX="163.0" layoutY="66.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code10" layoutX="296.0" layoutY="66.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code14" layoutX="428.0" layoutY="66.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code3" layoutX="30.0" layoutY="93.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code7" layoutX="163.0" layoutY="93.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code11" layoutX="296.0" layoutY="93.0" prefHeight="17.0" prefWidth="90.0" />
+            <Label fx:id="code15" layoutX="428.0" layoutY="93.0" prefHeight="17.0" prefWidth="90.0" />
+            <Button fx:id="error0" layoutX="6.0" layoutY="5.0" mnemonicParsing="false" onAction="#queryError0" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error1" layoutX="6.0" layoutY="33.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error2" layoutX="6.0" layoutY="62.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error3" layoutX="6.0" layoutY="91.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error4" layoutX="139.0" layoutY="6.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error5" layoutX="139.0" layoutY="34.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error6" layoutX="139.0" layoutY="63.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error7" layoutX="139.0" layoutY="92.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error8" layoutX="272.0" layoutY="6.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error9" layoutX="272.0" layoutY="34.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error10" layoutX="272.0" layoutY="63.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error11" layoutX="272.0" layoutY="92.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error12" layoutX="404.0" layoutY="6.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error13" layoutX="404.0" layoutY="34.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error14" layoutX="404.0" layoutY="63.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
+            <Button fx:id="error15" layoutX="404.0" layoutY="92.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="0.0" />
          </children></Pane>
       <Label fx:id="statusLabel" layoutX="159.0" layoutY="54.0" prefHeight="17.0" prefWidth="103.0">
          <font>
