--- a/src/MainClasses/ErrorWindowUI.fxml
+++ b/src/MainClasses/ErrorWindowUI.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="651.0" prefWidth="187.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainClasses.errorWindowController">
+<AnchorPane prefHeight="651.0" prefWidth="187.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainClasses.ErrorWindowController">
    <children>
       <Pane prefHeight="651.0" prefWidth="200.0">
          <children>
-            <TextArea layoutY="35.0" prefHeight="616.0" prefWidth="200.0" />
+            <TextArea fx:id="textArea" layoutY="35.0" prefHeight="616.0" prefWidth="200.0" />
             <Label layoutX="30.0" layoutY="7.0" prefHeight="22.0" prefWidth="142.0" text="Error - Port Distribution" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="12.0" />
