Adjusted UI and have the in depth analysis of error distribution over the ports displaying in their TextArea.

--- a/src/MainClasses/MainWindowUI.fxml
+++ b/src/MainClasses/MainWindowUI.fxml
@@ -2,12 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="214.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainClasses.MainWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="214.0" prefWidth="726.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainClasses.MainWindowController">
    <children>
       <Label layoutX="110.0" layoutY="53.0" prefHeight="20.0" prefWidth="51.0" text="Status:">
          <font>
@@ -67,5 +68,6 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <TextArea fx:id="textArea" layoutX="561.0" layoutY="14.0" prefHeight="193.0" prefWidth="148.0" />
    </children>
 </AnchorPane>
